--- a/public/chat.html
+++ b/public/chat.html
@@ -54,9 +54,9 @@
 </head>
 
 <body>
-  <div id="preloader" style="z-index: 100; overflow: hidden; visibility: visible;position: absolute;height: 100vh;width: 100vw;display: flex;position: fixed; flex-direction: row-reverse; background: #111d2a;justify-content: center;align-items: center;">
+  <div id="preloader" style="z-index: 100; overflow: hidden; visibility: visible; position: absolute;height: 100vh;width: 100vw;display: flex;position: fixed; flex-direction: column; background: #111d2a;justify-content: center;align-items: center;">
     <!--create a preloder screen-->
-    <img src="./images/loading.svg" height="80px" width="80px" alt="" srcset="">
+    <img src="./images/loader.gif" height="80px" width="80px" alt="" srcset="" style="filter: invert(1); mix-blend-mode: screen;">
     <h3 style="margin: 0;">Connecting to server</h3>
   </div>
   <div id="main-screen" style="visibility: hidden;">
