--- a/public/chat.html
+++ b/public/chat.html
@@ -56,7 +56,7 @@
 <body>
   <div id="preloader" style="z-index: 100; overflow: hidden; visibility: visible; position: absolute;height: 100vh;width: 100vw;display: flex;position: fixed; flex-direction: column; background: #111d2a;justify-content: center;align-items: center;">
     <!--create a preloder screen-->
-    <img src="./images/loader.gif" height="80px" width="80px" alt="" srcset="" style="filter: invert(1); mix-blend-mode: screen;">
+    <img src="./images/loader.gif" height="50px" width="50px" alt="" srcset="">
     <h3 style="margin: 0;">Connecting to server</h3>
   </div>
   <div id="main-screen" style="visibility: hidden;">
@@ -81,7 +81,13 @@
       </div>
       
       <div class="chat__main">
-        <ol id="messages" class="chat__messages"></ol>
+        <ol id="messages" class="chat__messages">
+          <div class="intro">
+            <img src="images/loader.gif" height="100px" width="100px" alt="" srcset="">
+            <h2>Welcome To PokeTab Messanger</h2>
+            <div class="credit">Developed by <a href="http://itsfuad.netlify.app">Fuad Hasan</a> 🐸</div>
+          </div>
+        </ol>
         <div class="toast-popup" style="display: none;">
           <div class="toast-popup-replying-to">
             <div class="toast-popup-name"></div>
@@ -103,10 +109,10 @@
     
       <template id="message-template" type="text/template">
         <li class="message">
-          <div class="avatar"><img id="avatar" {{attr}}="{{attrVal}}" height="40px" width="40px" alt="" srcset=""></div>
+          <div class="avatar"><img id="avatar" src="{{attrVal}}" height="40px" width="40px" alt="" srcset=""></div>
           <div class="message__body">
-            <div class="message__title title" style="transform: {{transformTitle}};"><h3>{{from}}</h3></div>
-            <div class="reply-message replyMessage" style="display: {{display}}; transform: {{transformReply}}">{{reply}}</div>
+            <div class="message__title title" {{attr}}="{{messageTitleStyle}}"><h3>{{{replyIcon}}}{{from}}</h3></div>
+            <div class="reply-message replyMessage" {{attr}}="{{replyMessageStyle}}">{{reply}}</div>
             <div class="main-message">
               <p class="textMessage">{{text}}</p>
               <span class='time'>{{createdAt}}</span>
@@ -120,8 +126,8 @@
         <li class="my__message">
           <!--div class="avatar"><img id="avatar" {{attr}}="{{attrVal}}" height="40px" width="40px" alt="" srcset=""></-div-->
           <div class="my__message__body">
-            <div class="my__message__title title" style="display: {{display}}; transform: {{transformTitle}}"><h3>{{from}}</h3></div>
-            <div class="my-reply-message replyMessage" style="display: {{display}}; transform: {{transformReply}}">{{reply}}</div>
+            <div class="my__message__title title" {{attr}}="{{messageTitleStyle}}"><h3>{{{replyIcon}}}{{from}}</h3></div>
+            <div class="my-reply-message replyMessage" {{attr}}="{{replyMessageStyle}}">{{reply}}</div>
             <div class="main-message">
               <span class='time'>{{createdAt}}</span>
               <p class="textMessage">{{text}}</p>
