--- a/public/chat.html
+++ b/public/chat.html
@@ -115,7 +115,7 @@
             <div class="message__title title" {{attr}}="{{messageTitleStyle}}"><h3>{{from}}{{{repIcon}}}</h3></div>
             <div class="reply-message replyMessage" {{attr}}="{{replyMessageStyle}}"><a href="#{{RepId}}" style="color: silver;">{{reply}}</a></div>
             <div class="main-message">
-              <p class="textMessage">{{text}}</p>
+              <p class="textMessage">{{{text}}}</p>
               <span class='time'>{{createdAt}}</span>
             </div>
           </div>
@@ -131,7 +131,7 @@
             <div class="my-reply-message replyMessage" {{attr}}="{{replyMessageStyle}}"><a href="#{{RepId}}" style="color: silver;">{{reply}}</a></div>
             <div class="main-message">
               <span class='time'>{{createdAt}}</span>
-              <p class="textMessage">{{text}}</p>
+              <p class="textMessage">{{{text}}}</p>
             </div>
           </div>
           
