--- a/public/index.html
+++ b/public/index.html
@@ -146,6 +146,6 @@
     </div>
     <script defer src="/socket.io/socket.io.js"></script>
     <script defer src="./js/libs/jquery-3.1.0.min.js"></script>
-    <script defer src="./index.js"></script>
+    <script defer src="./index.min.js"></script>
 </body>
 </html>
