--- a/public/index.html
+++ b/public/index.html
@@ -102,7 +102,7 @@
                     <label for="psyduck"><img src="./images/avatars/psyduck(custom).png" alt="" srcset=""></label>
                     <input type="radio" name="avatar" value="rattata" id="rattata">
                     <label for="rattata"><img src="./images/avatars/rattata(custom).png" alt="" srcset=""></label>
-                    <input type="radio" name="avatar" value="rattata" id="snorlax">
+                    <input type="radio" name="avatar" value="snorlax" id="snorlax">
                     <label for="rattata"><img src="./images/avatars/snorlax(custom).png" alt="" srcset=""></label>
                     <input type="radio" name="avatar" value="squirtle" id="squirtle">
                     <label for="squirtle"><img src="./images/avatars/squirtle(custom).png" alt="" srcset=""></label>
