--- a/public/index.html
+++ b/public/index.html
@@ -144,6 +144,21 @@
             </div>
         </form>
     </div>
+    <div class="howtouse">
+        <h1>How to use</h1>
+        <ul>
+            <li>To start a conversation user/users must have entered the same Key.</li>
+            <li>Create your own unique key so that other cannot join your chat by just guessing the key.</li>
+            <li>Conversation will be deleted from your device after you disconnect/exit.</li>
+            <li>You cannot see previous messages after re joining.</li>
+            <li>You can vibrate other users phone by tapping ther name from the active online users list</li>
+            <li>Tap on the message to reply to a specific message.</li>
+            <li>On Pc, use can use Ctrl+Enter to send message.</li>
+        </ul>
+    </div>
+    <div class="footer">
+        <p>&copy; Copyright Fuad Hasan 2022. All rights reserved.</p>
+    </div>
     <script defer src="/socket.io/socket.io.js"></script>
     <script defer src="./js/libs/jquery-3.1.0.min.js"></script>
     <script defer src="./index.min.js"></script>
