--- a/public/chat.html
+++ b/public/chat.html
@@ -42,8 +42,8 @@
   <link rel="apple-touch-startup-image" href="icons/apple-splash-1334-750.jpg" media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)">
   <link rel="apple-touch-startup-image" href="icons/apple-splash-640-1136.jpg" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)">
   <link rel="apple-touch-startup-image" href="icons/apple-splash-1136-640.jpg" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)">
-
-
+  <link rel="preload" as="image" href="./images/tick.png">
+  <link rel="preload" as="image" href="./images/seen.png">
   <meta charset="utf-8">
   <title>Inbox | PokeTab Messanger</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=0">
@@ -131,6 +131,7 @@
             <div class="main-message">
               <span class='time'>{{createdAt}}</span>
               <p class="textMessage">{{{text}}}</p>
+              <img src="./images/tick.png" class="sent">
             </div>
           </div>
           
@@ -176,9 +177,9 @@
 
   <script defer src="/socket.io/socket.io.js"></script>
   <script defer src="/js/libs/jquery-3.1.0.min.js"></script>
-  <script defer src="/js/libs/moment.js"></script>
-  <script defer src="/js/libs/mustache.js"></script>
-  <script defer src="/js/libs/deparam.js"></script>
+  <script defer src="/js/libs/moment.min.js"></script>
+  <script defer src="/js/libs/mustache.min.js"></script>
+  <script defer src="/js/libs/deparam.min.js"></script>
   <script defer src="/js/chat.js"></script>
 </body>
 
